<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="right|end"
    app:elevation="8dp"
    android:fitsSystemWindows="true"
    android:foregroundGravity="right">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tessssst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nav_head"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/nav_img_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_face_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/app_name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nav_img_header"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"

            app:layout_constraintTop_toBottomOf="@+id/nav_head">

            <RelativeLayout
                android:id="@+id/nav_item_home"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nav_img_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_home_black_24dp" />

                <TextView
                    android:id="@+id/nav_txt_home"
                    style="@style/HeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/nav_img_home"
                    android:layout_toLeftOf="@id/nav_img_home"
                    android:text="@string/nav_menu_item_home" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nav_item_orders"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nav_img_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_home_black_24dp" />

                <TextView
                    android:id="@+id/nav_txt_orders"
                    style="@style/HeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/nav_img_orders"
                    android:layout_toLeftOf="@id/nav_img_orders"
                    android:text="@string/nav_menu_item_orders" />
            </RelativeLayout>

            <View
                android:background="@color/gray"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"/>

            <RelativeLayout
                android:id="@+id/nav_item_messages"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nav_img_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_home_black_24dp" />

                <TextView
                    android:id="@+id/nav_txt_messages"
                    style="@style/HeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/nav_img_messages"
                    android:layout_toLeftOf="@id/nav_img_messages"
                    android:text="@string/nav_menu_item_messages" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/nav_item_share"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nav_img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_home_black_24dp" />

                <TextView
                    android:id="@+id/nav_txt_share"
                    style="@style/HeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/nav_img_share"
                    android:layout_toLeftOf="@id/nav_img_share"
                    android:text="@string/nav_menu_item_share" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/nav_item_contactus"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/nav_img_contactus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_home_black_24dp" />

                <TextView
                    android:id="@+id/nav_txt_contactus"
                    style="@style/HeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/nav_img_contactus"
                    android:layout_toLeftOf="@id/nav_img_contactus"
                    android:text="@string/nav_menu_item_contactus" />
            </RelativeLayout>




        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.navigation.NavigationView>
